<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <!-- POM file generated with GWT webAppCreator -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.roamsys.opensource</groupId>
    <artifactId>swaggerapi</artifactId>
    <packaging>jar</packaging>
    <version>3.0.0-SNAPSHOT</version>
    <organization>
        <name>ROAMSYS S.A.</name>
        <url>http://www.roamsys.com</url>
    </organization>
    <name>SwaggerAPI</name>
    <description>Swagger API support for server with REST APIs written in Java</description>
    <dependencies>
        <dependency>
            <groupId>javaee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20160810</version>
        </dependency>    
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>3.3.3</version>
            </extension>
        </extensions>
    </build>
    <repositories>
        <repository>
            <name>Roamsys Repository</name>
            <id>roamsys-repository</id>
            <url>scp://37.157.154.101/home/mvnuser/repository</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>roamsys-repository</id>
            <name>Roamsys Repository</name>
            <url>scp://37.157.154.101/home/mvnuser/repository</url>
        </repository>
    </distributionManagement>
    <developers>
        <developer>
            <name>Michael Bartel</name>
            <email>mbartel@roamsys.com</email>
            <organization>ROAMSYS S.A.</organization>
            <organizationUrl>http://www.roamsys.com</organizationUrl>
        </developer>
        <developer>
            <name>Johanna Heib</name>
            <email>johanna@roamsys.com</email>
            <organization>ROAMSYS S.A.</organization>
            <organizationUrl>http://www.roamsys.com</organizationUrl>
        </developer>
        <developer>
            <name>Norbert Becker</name>
            <email>norbert@roamsys.com</email>
            <organization>ROAMSYS S.A.</organization>
            <organizationUrl>http://www.roamsys.com</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:ROAMSYS/swaggerapi.git</connection>
        <developerConnection>scm:git:git@github.com:ROAMSYS/swaggerapi.git</developerConnection>
        <url>git@github.com:ROAMSYS/swaggerapi.git</url>
    </scm>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
</project>
